@@ -153,7 +153,7 @@
   <appSettings>
     <!-- When this is true, all caching, css combining, js comining etc turned off to facilitate
     faster development. Turn this off when you go live for significant performance improvement. -->
-    <add key="DeveloperMode" value="true"/>
+    <add key="DeveloperMode" value="false"/>
     <!-- The base URL of the site, including the trailing slash. Used in constucting 
     URLs in mail templates. -->
     <add key="WebRoot" value="http://localhost:8000/Dropthings/" />
